--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <caption>Nos Produits</caption>
                 <thead>
                     <tr>
-                        <th>Produits</th>
+                        <th>Produit</th>
                         <th>Descprition</th>
                         <th>Prix</th>
                     </tr>
@@ -189,12 +189,13 @@
             <p class="footer__address ">Nos coordonnées : </p>
             <p class="footer__address">50 rue lorem ipsum</p>
             <p class="footer__address">80000 AMIENS</p>
-            <p class="footer__address"><i class="fas fa-phone"></i> : +1234567890</p>
+            <p class="footer__address"><i class="fas fa-phone"></i> : +12233344455</p>
+            <p class="footer__address"><a href="mentions.html" class="footer__address__link">Mentions légales</a></p>
         </div>
 
         <div class="footer__right">
-            <p class="footer__social"><i class="fab fa-facebook-f"></i></p>
-            <p class="footer__social"><i class="fab fa-twitter"></i></p>
+            <p class="footer__social"><a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a></p>
+            <p class="footer__social"><a href="https://twitter.com"><i class="fab fa-twitter"></i></a></p>
             <p class="footer__social"><i class="fab fa-facebook-messenger"></i></p>
             
         </div>
